compiler/testData/diagnostics/tests/generics/unclearTypeMismatchWithCapturedTypes.diag.txt
/unclearTypeMismatchWithCapturedTypes.kt:15:22: error: type mismatch: inferred type is Number but Number was expected
    numberBoxHandler(inNumberBox, number)
                     ^^^^^^^^^^^
/unclearTypeMismatchWithCapturedTypes.kt:15:35: error: type mismatch: inferred type is Number but Number was expected
    numberBoxHandler(inNumberBox, number)
                                  ^^^^^^
/unclearTypeMismatchWithCapturedTypes.kt:16:25: error: type mismatch: inferred type is Number but Number was expected
    outNumberBoxHandler(inNumberBox, number)
                        ^^^^^^^^^^^
/unclearTypeMismatchWithCapturedTypes.kt:16:38: error: type mismatch: inferred type is Number but Number was expected
    outNumberBoxHandler(inNumberBox, number)
                                     ^^^^^^

